k8s/red-limo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: red-limo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  # - hosts:
  #   - localhost
    secretName: tlssecret
  rules:
  # - host: localhost
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: springboot-lb
            port:
              number: 8080
